--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
     "@sap/cds": "^7",
     "express": "^4"
   },
+  "devDependencies": {
+    "@cap-js/sqlite": "^1.3.1"
+  },
   "scripts": {
     "start": "cds-serve"
+  },
+  "cds": {
+    "requires": {
+      "db": {
+        "[development]": {
+          "kind": "sqlite",
+          "credentials": {
+            "url": "db.sqlite"
+          }
+        }
+      }
+    }
   }
 }
