exercise 14 - initial commit

--- a/package.json
+++ b/package.json
@@ -21,6 +21,20 @@
             "url": "db.sqlite"
           }
         }
+      },
+      "auth": {
+        "kind": "mocked",
+        "users": {
+          "adminuser": {
+            "password": "abcd1234",
+            "roles": [
+              "admin"
+            ]
+          },
+          "catuser": {
+            "password": "abcd1234"
+          }
+        }
       }
     }
   }
