--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "[development]": {
           "kind": "sqlite",
           "credentials": {
-            "url": "db.sqlite"
+            "url": ":memory:"
           }
         }
       }
