--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cap_lj",
+  "name": "cap-development-learning-journey",
   "version": "1.0.0",
   "description": "A simple CAP project",
   "dependencies": {
